--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3"
+        "php": "^8.0"
     },
     "autoload": {
         "psr-4": {
