--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.1"
     },
     "autoload": {
         "psr-4": {
